--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # Name of your site (displayed in the header)
 title: Yikes, Kam!
 # Short bio or description (displayed in the header)
-description: A Blog
+description: a blog
 
 #
 # !! DON'T EDIT BELOW THIS MESSAGE
